# endoscope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  justfile  main.py  pyproject.toml
deploy/kustomize/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
endoscope/: __init__.py  api.py  app.py  cli.py  client.py  config.py  logging.py  sdk.py  services.py  storage.py
tests/: conftest.py  test_app.py  test_cli.py  test_client.py  test_sdk.py  test_services.py
