[project]
name = "endoscope"
version = "0.9.0"
description = "Lightweight debug artifact capture system"
readme = "README.md"
authors = [
    {name = "Frank Wiles", email = "frank@revsys.com"},
]
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
]
dependencies = [
    "aioboto3>=15.5.0",
    "environs>=14.6.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.12.5",
    "pytest-asyncio>=0.26.0",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "ruff>=0.15.8",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
    "ty>=0.0.26",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/frankwiles/endoscope"
Repository = "https://github.com/frankwiles/endoscope"
Issues = "https://github.com/frankwiles/endoscope/issues"

[project.scripts]
endoscope = "endoscope.cli:run"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "endoscope"
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
